# ems_protocols_assistant

./: .pre-commit-config.yaml  README.md  Sources.md  demograph_info.py  docker-compose.yml  main.py  outline.md  timeline.md  vitalpath_plan.md
.github/workflows/: ci.yml
archive/: README.md  main.py  protocols.yaml
archive/procedures/: other_clinical_procedures.py
archive/protocols/: medical_protocols.py
archive/src/: domain.py  engine.py
archive/tests/: empty_file_for_testing.py
archive/tests/alternative_system/: purpose.md
archive/utils/: logger.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  bundles.py  protocols.py
backend/app/db/: __init__.py  repository.py
backend/app/models/: __init__.py  bundle.py  jurisdiction.py  medication.py  procedure.py  protocol.py
backend/app/services/: __init__.py  compiler.py  parser.py
backend/scripts/: ingest_protocols.py
backend/tests/: __init__.py  test_models.py
data/: README.md
data/raw/: protocol_context.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: index.ts
frontend/src/engine/: DoseCalculator.ts  (+2 more)
procedures/: imports.py  other_clinical_procedures.py
protocols/: GeneralPCP-Adult.py  GeneralPCP_Adult.py  imports.py  medical_protocols.py
shared/: README.md
shared/schemas/: protocol-schema.json
src/: domain.py
tests/: empty_file_for_testing.py  test_scraped_functions.py
tests/alternative_system/: test_new_ideas.py
(+14 files in other folders)
